--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-config-vuetify": "^3.0.3",
     "npm-run-all2": "^7.0.2",
     "pinia": "^3.0.1",
+    "sass": "^1.89.0",
     "sass-embedded": "^1.86.3",
     "typescript": "~5.8.2",
     "unplugin-auto-import": "^19.1.1",
