--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@fontsource/roboto": "5.2.5",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@mdi/font": "7.4.47",
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
+    "jwt-decode": "^4.0.0",
+    "sweetalert2": "^11.22.2",
     "vue": "^3.5.13",
+    "vue3-spinners": "^1.3.1",
     "vuetify": "^3.8.1"
   },
   "devDependencies": {
